[fix] adjust bottom paddings on mobile view

--- a/app/assets/stylesheets/redesign/pages/_get-the-look.scss
+++ b/app/assets/stylesheets/redesign/pages/_get-the-look.scss
@@ -127,12 +127,12 @@
     }
 
     .sectionGuideInfo .copyContent {
-      padding: 0 5px;
+      padding: 10px 5px;
     }
 
     .containerHalfScreenHero .image-section,
     .copyContent .image-section {
-      margin: 30px -20px;
+      margin: 20px -20px;
     }
 
     .containerHalfScreenHero .image-section {
